crates/rome_diagnostics/tests/macros/severity_paren.rs
use rome_diagnostics::Diagnostic;

#[derive(Debug, Diagnostic)]
#[diagnostic(severity(Error))]
struct TestDiagnostic {}

fn main() {}
